allow add users to user groups

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,16 +1,17 @@
 <h4>用户</h4>
 
 <div class="btn-group btn-group-sm" role="group" style="margin-bottom: 16px;">
-  <button class="btn btn-default">加入用户组</button>
+  <button class="btn btn-default js-add-to-user-group">加入用户组</button>
 </div>
 
 
-<table class="table table-bordered">
+<table class="table table-bordered users-table">
   <thead>
     <th></th>
     <th>用户昵称</th>
     <th>注册时间</th>
     <th>手机号</th>
+    <th>用户组</th>
     <th>操作</th>
   </thead>
   <tbody>
@@ -20,6 +21,7 @@
         <td><%= user.nickname %></td>
         <td><%= user.created_at.to_formatted_s(:date_and_time) %></td>
         <td><%= user.mobile_part %></td>
+        <td><%= user.user_groups_as_text %></td>
         <td>
           <%= link_to '设置权限', edit_admin_user_path(user) %>
         </td>
@@ -27,3 +29,27 @@
     <% end -%>
   </tbody>
 </table>
+
+<div class="modal fade" tabindex="-1" role="dialog" id="addToUserGroupModal">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">加入用户组</h4>
+      </div>
+      <div class="modal-body">
+        <p>将选择的用户加入下面的用户组</p>
+        <select name="user-group">
+          <option value="-1">请选择</option>
+          <% @user_groups.each do |group| %>
+            <option value="<%= group.id %>"> <%= group.name %>
+          <% end %>
+        </select>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+        <button class="btn btn-primary js-confirm" data-dismiss="modal">确认</button>
+      </div>
+    </div>
+  </div>
+</div>
