update floating barcode img

--- a/app/views/welcome/_barcode.html.erb
+++ b/app/views/welcome/_barcode.html.erb
@@ -1,1 +1,1 @@
-<%= image_tag 'http://7xtg0z.com2.z0.glb.clouddn.com/qrcode_floating.jpg', class: 'qr-floating' %>
+<%= image_tag 'http://7xtg0z.com2.z0.glb.clouddn.com/qrcode0622.png', class: 'qr-floating' %>
