add watermark to guide content

--- a/app/assets/stylesheets/exercises.scss
+++ b/app/assets/stylesheets/exercises.scss
@@ -213,6 +213,11 @@ $green: #749d1f;
       margin-bottom: 40px;
     }
 
+    .guide-content {
+      padding: 16px 24px 16px 22px;
+      background: url(/images/watermark.png) 0 -10px repeat;
+    }
+
   }
 
   h3 {
@@ -254,3 +259,4 @@ $green: #749d1f;
 
 
 }
+
