--- a/app/views/exercises/_guides.html.erb
+++ b/app/views/exercises/_guides.html.erb
@@ -11,7 +11,7 @@
 
   <% if @exercise.is_sc_cr_ps_ds? %>
 
-    <div style="padding-left: 22px;">
+    <div class="guide-content">
       <%= raw @exercise.math_guide %>
     </div>
 
