--- a/app/assets/stylesheets/exercises.scss
+++ b/app/assets/stylesheets/exercises.scss
@@ -216,6 +216,12 @@ $green: #749d1f;
     .guide-content {
       padding: 16px 24px 16px 22px;
       background: url(/images/watermark.png) 0 -10px repeat;
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
     }
 
   }
