--- a/app/views/admin/user_groups/index.html.erb
+++ b/app/views/admin/user_groups/index.html.erb
@@ -20,7 +20,7 @@
             <span class="text-muted">长期</span>
           <% end -%>
         </td>
-        <td><%= link_to g.users.count, '#' %></td>
+        <td><%= link_to g.users.count, "/admin/user_groups/#{g.id}/users" %></td>
         <td>
           <%= link_to '编辑', edit_admin_user_group_path(g) %>
           <%= link_to '删除', '#' %>
