--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -71,6 +71,21 @@ img {
   margin-right: auto;
 }
 
+.container-small {
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background: white;
+}
+
+.update-mobile .container-small {
+  text-align: center;
+  padding: 36px 0 72px 0;
+  margin-top: 64px;
+  margin-bottom: 128px;
+  border: 1px solid #ddd;
+}
+
 .homepage h3:after {
   content: ' ';
   display: block;
