--- a/app/views/admin/user_groups/users.html.erb
+++ b/app/views/admin/user_groups/users.html.erb
@@ -1,7 +1,7 @@
 <h4>用户组 &gt; [<%= @group.name %>]</h4>
 <p class="text-muted" style="margin-bottom: 24px">权限：<%= @group.label_names %>&nbsp; &nbsp; <%= link_to '编辑权限', edit_admin_user_group_path(@group) %> </p>
 
-<table class="table table-bordered">
+<table class="table table-bordered" data-group="<%= @group.id %>">
     <thead>
         <th>昵称</th>
         <th>注册时间</th>
@@ -12,7 +12,7 @@
         <tr>
             <td><%= user.nickname %></td>
             <td><%= user.created_at.to_formatted_s(:date_and_time) %></td>
-            <td>删除</td>
+            <td><a href="#" class="js-remove-user" data-id="<%= user.id %>">移除</a></td>
         </tr>
         <% end %>
     </tbody>
