try another solution for layer

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -1,6 +1,7 @@
 /*
  *= require admin/posts
  *= require jquery.datetimeentry
+ *= require layer
  *= require_self
  */
 @import "bootstrap-sprockets";
