validate user group name presence

--- a/app/views/admin/user_groups/edit.html.erb
+++ b/app/views/admin/user_groups/edit.html.erb
@@ -6,4 +6,14 @@
   </div>
 <% end -%>
 
+<% if @user_group.errors.any? %>
+  <div class="alert alert-danger" role="alert">
+    <ul>
+    <% @user_group.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end -%>
+
 <%= render partial: "admin/user_groups/form" %>
