--- a/app/views/admin/user_groups/_form.html.erb
+++ b/app/views/admin/user_groups/_form.html.erb
@@ -9,7 +9,7 @@
   <div class="form-group">
     <label for="book" class="col-sm-2 control-label">来源</label>
     <div class="col-sm-10">
-      <% @books.each do |book| %>
+      <% Label.books.each do |book| %>
         <label class="checkbox-inline">
           <input type="checkbox" name="user_group[label_ids][]" value="<%= book.id %>" <%= (@user_group.label_ids.include?(book.id)) ? 'checked' : '' %>>
           <%= book.name %>
@@ -21,7 +21,7 @@
   <div class="form-group">
     <label for="subject" class="col-sm-2 control-label">题型</label>
     <div class="col-sm-10">
-      <% @subjects.each do |subject| %>
+      <% Label.subjects.each do |subject| %>
         <label class="checkbox-inline">
           <input type="checkbox" name="user_group[label_ids][]" value="<%= subject.id %>" <%= (@user_group.label_ids.include?(subject.id)) ? 'checked' : '' %>>
           <%= subject.name %>
@@ -33,7 +33,7 @@
   <div class="form-group">
     <label for="difficulty" class="col-sm-2 control-label">难度</label>
     <div class="col-sm-10">
-      <% @difficulties.each do |d| %>
+      <% Label.difficulties.each do |d| %>
         <label class="checkbox-inline">
           <input type="checkbox" name="user_group[label_ids][]" value="<%= d.id %>" <%= (@user_group.label_ids.include?(d.id)) ? 'checked' : '' %>>
           <%= d.name %>
