optimize user group list display

--- a/app/views/admin/user_groups/_form.html.erb
+++ b/app/views/admin/user_groups/_form.html.erb
@@ -46,7 +46,7 @@
     <label for="valid_to" class="col-sm-2 control-label">权限有效期</label>
     <div class="col-sm-4">
       <%= f.text_field :valid_to, class: 'form-control datetime' %>
-      <p class="text-muted">不填写代表长期有效</p>
+      <p class="text-muted" style="margin-top: 4px">不填写代表长期有效</p>
     </div>
   </div>
 
