--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -143,3 +143,9 @@ table.files .delete-attachment {
     border-color: #eee;
   }
 }
+
+.exercise-filter-form {
+  select {
+    margin-right: 24px;
+  }
+}
