--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -13,7 +13,10 @@
   <body>
     <nav class="navbar navbar-default">
       <div class="container">
-        <a class="navbar-brand" href="/admin/posts">GMAT770内容管理系统</a>
+        <a class="navbar-brand" href="/admin">GMAT770内容管理系统</a>
+        <% if current_user %>
+          <p class="navbar-text navbar-right">当前用户 <a href="#" class="navbar-link"><%= current_user.name %></a></p>
+        <% end %>
       </div>
     </nav>
 
