--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -7,17 +7,21 @@
 
 <table class="table table-bordered users-table">
   <thead>
-    <th></th>
-    <th>用户昵称</th>
-    <th>注册时间</th>
-    <th>手机号</th>
-    <th>用户组</th>
+    <tr>
+      <th></th>
+      <th>用户昵称</th>
+      <th>性别</th>
+      <th>注册时间</th>
+      <th>手机号</th>
+      <th>用户组</th>
+    </tr>
   </thead>
   <tbody>
     <% @users.each do |user| %>
       <tr data-id="<%= user.id %>">
         <td><input type="checkbox"></td>
         <td><%= user.nickname %></td>
+        <td><%= (user.sex == 1) ? '男' : '女' %></td>
         <td><%= user.created_at.to_formatted_s(:date_and_time) %></td>
         <td><%= user.mobile_part %></td>
         <td><%= user.user_groups_as_text %></td>
