add function to show lonely users only

--- a/app/views/admin/users/lonely.html.erb
+++ b/app/views/admin/users/lonely.html.erb
@@ -1,11 +1,11 @@
-<h4>用户</h4>
+<h4>用户 [不在任何用户组中]</h4>
 
 <div class="btn-group btn-group-sm" role="group" style="margin-bottom: 16px;">
   <button class="btn btn-default js-add-to-user-group">加入用户组</button>
 </div>
 
 <div style="float:right">
-  <%= link_to '显示不在任何用户组中的用户', admin_lonely_users_path %>
+  <%= link_to '显示所有用户', admin_users_path %>
 </div>
 
 
