--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -185,14 +185,36 @@ nav li a:hover, nav li a.active,
   padding-left: 100px;
 }
 
-.qr-floating {
+.customer-service {
+  background: #f5f5f5;
   position: fixed;
   right: 0;
   bottom: 120px;
-  width: 120px;
-  border: 1px solid #ddd;
   box-shadow: 0 0 5px rgba(0,0,0,.1);
   z-index: 10;
+
+  img {
+    display: block;
+    width: 120px;
+  }
+
+  .close {
+    display: block;
+    padding: 3px 10px;
+  }
+
+  .contact {
+    width: 40px;
+    text-align: center;
+    padding: 10px;
+    display: block;
+    background: #3587F8;
+    color: white;
+
+    &:hover {
+      background-color: #1C72E9;
+    }
+  }
 }
 
 /* color utilities */
