--- a/app/views/welcome/_barcode.html.erb
+++ b/app/views/welcome/_barcode.html.erb
@@ -1,5 +1,5 @@
 <div class="customer-service">
   <%= image_tag 'http://7xtg0z.com2.z0.glb.clouddn.com/qrcode0622.png' %>
   <a href="#" class="close">收起</a>
-  <a class="contact" href="#">联系客服</a>
+  <a class="contact" href="#" style="display:none">联系客服</a>
 </div>
