--- a/app/views/admin/user_groups/index.html.erb
+++ b/app/views/admin/user_groups/index.html.erb
@@ -5,8 +5,8 @@
     <th>组名</th>
     <th>权限</th>
     <th>权限有效期</th>
-    <th>学生人数</th>
-    <th>操作</th>
+    <th style="width: 75px">学生人数</th>
+    <th style="width: 60px">操作</th>
   </thead>
   <tbody>
     <% @groups.each do |g| %>
