--- a/app/views/exercises/index.html.erb
+++ b/app/views/exercises/index.html.erb
@@ -66,9 +66,8 @@
 
         <table cellspacing="0">
           <tbody>
-            <% @exercises.each_with_index do |e, i| %>
+            <% @exercises.each do |e| %>
               <tr class="exercise">
-                <td class="sr"><%= i + 1 %></td>
                 <td class="title">
                   <%= link_to raw(e.title), exercise_path(e) %>
                 </td>
