--- a/app/views/admin/exercises/_form.html.erb
+++ b/app/views/admin/exercises/_form.html.erb
@@ -133,6 +133,15 @@
   </div>
 
   <div class="form-group">
+    <label for="hide_from_view" class="col-sm-2 control-label">是否隐藏</label>
+    <div class="col-sm-10">
+      <label class="checkbox-inline">
+        <%= f.check_box :hide_from_view %> 在前台隐藏
+      </label>
+    </div>
+  </div>
+
+  <div class="form-group">
     <div class="col-sm-10 col-sm-offset-2">
       <%= f.submit '保存', class: 'btn btn-primary' %>
     </div>
