--- a/app/views/admin/exercises/index.html.erb
+++ b/app/views/admin/exercises/index.html.erb
@@ -44,6 +44,7 @@
   <thead>
     <th style="width: 500px;">题目</th>
     <th>标签</th>
+    <th>是否隐藏</th>
     <th style="width:80px">操作</th>
   </thead>
   <tbody>
@@ -54,6 +55,9 @@
           <% exercise.labels.each do |label| %>
             <span><%= label.name %></span>,&nbsp;
           <% end -%>
+        </td>
+        <td>
+          <%= exercise.hide_from_view ? '是' : '否' %>
         </td>
         <td>
           <%= link_to '编辑', edit_admin_exercise_path(exercise) %>
