--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -31,4 +31,5 @@
 <% content_for :scripts do %>
   <%= javascript_include_tag 'exercises' %>
   <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+  <script src='//player.polyv.net/script/polyvplayer.min.js'></script>
 <% end -%>
