--- a/app/views/admin/exercises/_form.html.erb
+++ b/app/views/admin/exercises/_form.html.erb
@@ -1,5 +1,12 @@
 <%= form_for [:admin, @exercise], html: { class: 'form-horizontal exercise-form' } do |f| %>
   <div class="form-group">
+    <label for="seq" class="col-sm-2 control-label">题号</label>
+    <div class="col-sm-10">
+      <%= f.text_field :seq, class: 'form-control' %>
+    </div>
+  </div>
+
+  <div class="form-group">
     <label for="title" class="col-sm-2 control-label">题干<span class="required">*</span></label>
     <div class="col-sm-10">
       <%= f.text_area :title, class: 'form-control', rows: 5 %>
