--- a/app/views/admin/exercises/_form.html.erb
+++ b/app/views/admin/exercises/_form.html.erb
@@ -105,6 +105,18 @@
   </div>
 
   <div class="form-group">
+    <label for="camps" class="col-sm-2 control-label">训练营</label>
+    <div class="col-sm-10">
+      <% Label.camps.each do |d| %>
+        <label class="checkbox-inline">
+          <input type="checkbox" name="exercise[label_ids][]" value="<%= d.id %>" <%= (@exercise.label_ids.include?(d.id)) ? 'checked' : '' %>>
+          <%= d.name %>
+        </label>
+      <% end -%>
+    </div>
+  </div>
+
+  <div class="form-group">
     <label for="hide_from_view" class="col-sm-2 control-label">是否隐藏</label>
     <div class="col-sm-10">
       <label class="checkbox-inline">
