--- a/app/views/exercises/_guides.html.erb
+++ b/app/views/exercises/_guides.html.erb
@@ -8,23 +8,24 @@
 
 <% else %>
 
-  <% options = ['A', 'B', 'C', 'D', 'E'] %>
+  <% if current_user.permission_type(@exercise) == Permission.TEXT_VIDEO %>
 
-  <% if @exercise.video_url.present? %>
-    <h3><%= image_tag 'icon-guides-video.png' %>视频解析</h3>
-    <% if true # 权限检查 %>
-      <!--
-        <div class="permission-reminder">您尚未获得视频解析权限，仅限<a href="#">逻辑小班</a>或<a href="#">VIP一对一</a>学员有权观看</div>
-      -->
-        <div class="polyv" id="<%= @exercise.video_url %>"></div>
+    <% if @exercise.video_url.present? %>
+      <h3><%= image_tag 'icon-guides-video.png' %>视频解析</h3>
+      <% if true # 权限检查 %>
+        <!--
+          <div class="permission-reminder">您尚未获得视频解析权限，仅限<a href="#">逻辑小班</a>或<a href="#">VIP一对一</a>学员有权观看</div>
+        -->
+          <div class="polyv" id="<%= @exercise.video_url %>"></div>
+      <% end -%>
     <% end -%>
-  <% end -%>
 
+  <% end %>
 
   <h3><%= image_tag 'icon-guides.png' %>题目解析</h3>
 
   <div class="guide-content" unselectable="on">
-    <%= raw @exercise.math_guide %>
+  <%= raw @exercise.math_guide %>
   </div>
   
 <% end -%>
