--- a/app/views/admin/user_groups/_form.html.erb
+++ b/app/views/admin/user_groups/_form.html.erb
@@ -7,6 +7,21 @@
   </div>
 
   <div class="form-group">
+    <label for="camps" class="col-sm-2 control-label">训练营</label>
+    <div class="col-sm-10">
+      <label class="checkbox-inline">
+        <a href="#" class="js-select-all">全选</a>
+      </label>
+      <% Label.camps.each do |camp| %>
+        <label class="checkbox-inline">
+          <input type="checkbox" name="user_group[label_ids][]" value="<%= camp.id %>" <%= (@user_group.label_ids.include?(camp.id)) ? 'checked' : '' %>>
+          <%= camp.name %>
+        </label>
+      <% end -%>
+    </div>
+  </div>
+
+  <div class="form-group">
     <label for="book" class="col-sm-2 control-label">来源</label>
     <div class="col-sm-10">
       <label class="checkbox-inline">
