display keyword in text input after search

--- a/app/views/exercises/index.html.erb
+++ b/app/views/exercises/index.html.erb
@@ -3,7 +3,7 @@
   <div class="pt2 header-margin search-bar">
     <div class="container">
       <%= form_tag search_exercises_path, :method => :get do %>
-        <%= text_field_tag :query, params[:query], placeholder: '输入题目关键词' %> <%= submit_tag "搜索" %>
+        <%= text_field_tag :query, params[:query], placeholder: '输入题目关键词', value: params[:query] %> <%= submit_tag "搜索" %>
       <% end %>
     </div>
   </div>
