--- a/app/views/layouts/_login.html.erb
+++ b/app/views/layouts/_login.html.erb
@@ -1,5 +1,8 @@
 <% if current_user %>
-  <div class="login"><a href="#"><%= current_user.nickname %></a></div>
+  <div class="login">
+    <a href="#"><%= current_user.nickname %></a>
+    <%= link_to '退出登陆', logout_path, class: 'logout' %>
+  </div>
 <% else %>
   <div class="login"><%= link_to '登录', '/auth/open_wechat' %></div>
 <% end -%>
